Application logic changes for thumbnail generation and code optimisations